Consul Service Name Fix

--- a/src/psw.itt.api/appsettings.Container.json
+++ b/src/psw.itt.api/appsettings.Container.json
@@ -22,7 +22,7 @@
   "ConsulOptions": {
     "ConsulAddress": "http://consul:8500",
     "ServiceAddress": "http://itt:2200",
-    "ServiceName": "LmsService",
+    "ServiceName": "ITTService",
     "DisableAgentCheck": true,
     "Tags": []
   }
