--- a/src/psw.itt.api/appsettings.json
+++ b/src/psw.itt.api/appsettings.json
@@ -26,7 +26,7 @@
   "ConsulOptions": {
     "ConsulAddress": "http://consul:8500",
     "ServiceAddress": "http://itt:2200",
-    "ServiceName": "LmsService",
+    "ServiceName": "ITTService",
     "DisableAgentCheck": true,
     "Tags": []
   },
