PSW-38135: Product Code Management API's

--- a/src/psw.itt.api/appsettings.Development.json
+++ b/src/psw.itt.api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ITTConnectionString": "Server=10.1.4.62\\dev01;Initial Catalog=ITT;User ID=dev;Password=@Password1;"
+    "ITTConnectionString": "Server=10.1.4.62,1443;Initial Catalog=ITT;User ID=dev;Password=@Password1;"
   },
   "UseConsulDev": "false",
   "Logging": {
