--- a/src/psw.itt.data.sql/psw.itt.data.sql.csproj
+++ b/src/psw.itt.data.sql/psw.itt.data.sql.csproj
@@ -17,6 +17,8 @@
     <PackageReference Include="Dapper" Version="2.0.35" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
+    <PackageReference Include="SqlKata" Version="2.2.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
 </Project>
