--- a/src/psw.itt.service/psw.itt.service.csproj
+++ b/src/psw.itt.service/psw.itt.service.csproj
@@ -30,6 +30,7 @@
     <!-- <PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" /> -->
     <PackageReference Include="Serilog.Sinks.Seq" Version="4.0.0" />
     <PackageReference Include="FluentValidation" Version="9.3.0" />
+    <PackageReference Include="EPPlus" Version="5.7.0" />
  
   </ItemGroup>
 
