--- a/src/psw.itt.api/Properties/launchSettings.json
+++ b/src/psw.itt.api/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "psw.pcs.api": {
+    "psw.itt.api": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "weatherforecast",
@@ -27,7 +27,8 @@
         "ASPNETCORE_IDENTITY_SERVER_ISSUER": "http://localhost:4000",
         "SEQ_URL": "http://localhost:5341/",
         "ENCRYPTION_SALT": "random",
-        "ENCRYPTION_PASSWORD": "pass"
+        "ENCRYPTION_PASSWORD": "pass",
+        "ConnectionStrings__ConnectionString": "Server=10.1.4.62,1443;Initial Catalog=ITT;User ID=dev;Password=@Password1;"
       }
     }
   }
