--- a/src/psw.itt.common/psw.itt.common.csproj
+++ b/src/psw.itt.common/psw.itt.common.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\lib\libcommon\src\psw.security\psw.security.csproj" />
     <PackageReference Include="FluentValidation" Version="9.3.0" />
   </ItemGroup>
 
