--- a/src/psw.itt.api/appsettings.json
+++ b/src/psw.itt.api/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "ITTConnectionString": "Server=mssqldb;Initial Catalog=ITT;User ID=sa;Password=@Password1;"
+    "ITTConnectionString": "Server=mssqldb;Initial Catalog=ITT;User ID=sa;Password=@Password1;",
+    "SHRDConnectionString": "Server=mssqldb;Initial Catalog=SHRD;User ID=sa;Password=@Password1;"
   },
   "Logging": {
     "LogLevel": {
