--- a/src/psw.itt.api/appsettings.json
+++ b/src/psw.itt.api/appsettings.json
@@ -4,12 +4,14 @@
     "SHRDConnectionString": "Server=mssqldb;Initial Catalog=SHRD;User ID=sa;Password=@Password1;"
   },
   "Logging": {
+    "IncludeScopes": false,
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  
   "AllowedHosts": "*",
   "RabbitMqConfig": {
     "HostName": "rabbitmq",
@@ -71,7 +73,8 @@
           "rollingInterval": "Day",
           "shared": false,
           "fileSizeLimitBytes": 50000000,
-          "rollOnFileSizeLimit": true
+          "rollOnFileSizeLimit": true,
+          "retainedFileCountLimit": 120
         }
       }
     ]
